feat/playlist-team: implement share and join
